Reviewed part of renewal argument & equation

--- a/network_modeling/network_modeling.tex
+++ b/network_modeling/network_modeling.tex
@@ -22,6 +22,7 @@
 \usepackage{mathtools}
 \usepackage{amsthm}
 \usepackage{amsmath, amssymb, dsfont, bm}
+\usepackage{cases}
 
 % tikz figures
 \usepackage[usenames, dvipsnames, table, tikz]{xcolor}
