--- a/network_modeling/renewalProc.tex
+++ b/network_modeling/renewalProc.tex
@@ -67,7 +67,7 @@ The classical example is the lifetime of a light bulb: everytime a blub dies the
 
 	\bigbreak
 	An interesting result can be proven for Poisson processes with intensity $\lambda$.
-	In this case, given $\beta_t = \delta_t + \gamma_t$, the join distribution of $\delta_t$ and $\gamma_t$ can be written as follows.
+	In this case, given $\beta_t = \delta_t + \gamma_t$, the joint distribution of $\delta_t$ and $\gamma_t$ can be written as follows.
 
 	\begin{equation}
 		\prob[\gamma_t > x, \delta_t > y ] =
@@ -87,122 +87,155 @@ The classical example is the lifetime of a light bulb: everytime a blub dies the
 	\end{equation*}
 	where again it is taken into account that $\delta_t$ must be smaller than $t$, i.e. the last renewal cannot happen before 0.
 
-	The asymptotic value of this expectation removes the transient behaviour of the process and gives this surprising result.
+	The asymptotic behaviour of this parameter, that gets rid of the transient component, gives this surprising result.
 	\begin{equation*}
 		\lim_{t \to +\infty} \exp[\beta_t] = \lim_{t \to +\infty} \frac{2-e^{-\lambda \cdot t}}{\lambda} = \frac{2}{\lambda} > \frac{1}{\lambda} = \exp[X] \text{ where } X \sim exp(\lambda)
 	\end{equation*}
-	This result is indeed correct, but it clashes with our previous knowledge of the mean interarrivals time for Poisson process.
+	This result is indeed correct, but it clashes with our previous knowledge of the mean interarrivals time $X$ for Poisson process.
 	This paradox is easily explained with the concept of \emph{picking bias}: the choice of a random observation instant $t$ changes the statistical behaviour of the time interval, since bigger ones are privileged.
 
 \section{Asymptotic results}
-\begin{theorem}[Ross p. 101]
-%{\textbf{Ross p. 101}}
-Let $S_n = \sum \limits_{k=1}^{n}X_k$ a finite sum with $n<+\infty$ as there can't be infinite renewals in a finite time.
-Then
-\begin{equation}
-	\begin{cases}
-		S_n / n\xrightarrow{n\rightarrow\infty}\mu = \exp[X] \quad &\text{with probability 1} \\
-		N(\infty) = \lim_{t \to +\infty}N(t) = \infty \quad &\text{with probability 1}
-	\end{cases}
-\end{equation}
+\begin{theorem}[Ross p. 101 and passim]
+	Given a renewal process made of a sequence $X_k$ i.i.d. r.v., we can state that, with probability 1,
+	\begin{numcases}{}
+		\lim_{t \to +\infty} N(t) = N(\infty) = +\infty \label{eq:nt_to_infty} \\
+		\lim_{n \to +\infty} \frac {S_n} {n} =
+			\exp[X] <+\infty\quad \label{eq:renewal_partial_sum} \\
+		\lim_{t \to +\infty} \frac{N(t)}{t} = \frac{1}{\mu} \label{eq:nt_grows_linearly}
+	\end{numcases}
 \end{theorem}
-In essence this results states that in finite time we have a finite number of renewals. Viceversa in infinite time we have infinite renewals.
+% In essence this results states that in finite time we have a finite number of renewals. Viceversa in infinite time we have infinite renewals.
 
 \begin{proof}
-	In have infinite time, we have a finite number of renewals if and ony if there exists an event that is the last one, of as
-		\begin{equation}
-			\begin{split}
-				\prob[N(\infty)<\infty] &= \prob[X_n = \infty \text{ for some n}] = \prob[\bigcup\limits_{n=1}^{+\infty}\{X_n = \infty \}] \\
-				&\le \sum\limits_{n=1}^{+\infty}\prob[X_n = \infty] = 0 \\
-				&\text{because } F(\infty)=1
-			\end{split}
-		\end{equation}
+	\proofpart (equation \ref{eq:nt_to_infty})
+
+	In have infinite time, we have a finite number of renewals if and ony if there exists an event that is the last one, i.e. its assiciated renewal time $X_k$ takes an infinite amount of time.
+	\begin{equation*}
+		\begin{split}
+			\prob[N(\infty)<\infty] &= \prob[X_n = \infty \text{ for some n}] = \prob \left[ \bigcup\limits_{n=1}^{+\infty}\{X_n = \infty \} \right] \\
+			&\le \sum\limits_{n=1}^{+\infty}\prob[X_n = \infty] = 0 \text{~because~} F(\infty)=1
+		\end{split}
+	\end{equation*}
+
+	\proofpart (equation \ref{eq:renewal_partial_sum})
+
+	By $S_n$ definition, we have that $ S_{N(t)} / N(t)$ is the average interarrival time for the first $N(t)$ renewals and so for the \emph{Strong Law of Large Numbers} we have that this time average converges to the expectation.
+	$$ \lim_{t \to +\infty} \frac{S_{N(t)}}{N(t)} = \lim_{t \to +\infty} \frac{S_{N(t)+1}}{N(t)+1} = \lim_{N \to +\infty} \frac{S_{N}}{N} = \mu $$
+
+	\proofpart (equation \ref{eq:nt_grows_linearly})
+
+	By $S_n$ and $N(t)$ definitions, we have that $S_{N(t)}$ and $S_{N(t)+1}$ are respectively the time of the last and the next renewal of a given time $t$.
+
+	\begin{equation*}
+			S_{N(t)} \le t < S_{N(t)+1} \implies
+			\frac{S_{N(t)}}{N(t)} \le \frac{t}{N(t)} < \frac{S_{N(t)+1}}{N(t)} =\frac{S_{N(t)+1}}{N(t)+1} \cdot \frac{N(t)+1}{N(t)}
+	\end{equation*}
+
+	Finally, for the sandwich theorem and for equation \ref{eq:renewal_partial_sum}, we have that
+	$$ \mu \le \lim_{t \to +\infty} \frac{t}{N(t)} \stackrel{(*)}{\le}\mu \quad \implies \lim_{t \to +\infty} \frac{t}{N(t)} = \mu $$
+	Where in $(*)$ the strict $<$ became $\le$ as we were dealing with limits.
 \end{proof}
 
-\begin{theorem}[Elementary renewal theorem]%Prop. 3.3.1 (Ross p. 102), KT pp 437
-	\begin{equation}
-		\lim_{t \to +\infty} \frac{N(t)}{t} = \frac{1}{\mu} \quad \text{with probability 1}
-	\end{equation}
-\end{theorem}
 
-So as $t \to\infty$, $N(t)\to\infty$ \textbf{linearly} in $t$.
+\begin{theorem}[K.T. page 102]
+	We will now prove some interesting properties of the renewal function $M(t)$.
+
+	\begin{numcases}{}
+		\lim_{n \to +\infty} F_n(t) = 0 \text{ at least geometrically} \label{eq:Fn_geometric_decreasing} \\
+		\forall t, \, M(t) < +\infty \label{eq:mt_always_finite} \\
+		\lim_{t \to +\infty} M(t) = +\infty \label{eq:mt_diverges}
+	\end{numcases}
+
+\end{theorem}
 \begin{proof}
+	\proofpart (equation \ref{eq:Fn_geometric_decreasing})
+	Considering the distributions of the $r$-th renewal, we can state that
+
 	\begin{equation}
+		\exists r > 0: F_r(t) = \prob[S_r \le t] = \prob \left[ \sum_{i=1}^r X_i \le t \right] < 1
+	\end{equation}
+
+	Conversely, we can show that
+
+	\begin{equation} \begin{split}
+		\forall t, \exists r: ~ \prob[S_r > t] & = \prob \left[ \sum_{i=1}^r X_i > t \right]
+			\ge \prob \left[ X_k > \frac{t}{r} \,\forall k=1, \ldots, r \right] = \\
+		& = \left( \prob \left[ X_k > \frac{t}{r} \right] \right) ^ r =
+			\left( 1 - F \left( \frac{t}{r} \right) \right) ^ r > 0
+	\end{split} \end{equation}
+
+	Thus we have proved that $ \lim_{n \to +\infty} F_r(t) = 0 $ at least geometrically.
+
+	\proofpart (equation \ref{eq:mt_always_finite} and \ref{eq:mt_diverges})
+	First we derive a nice property of $F_n(t)$ distributions that holds for every $m \in [1,\, n-1]$:
+
+	\begin{equation} \label{eq:fn_upper_bound}
 		\begin{split}
-			S_{N(t)} \le t < S_{N(t)+1} \quad \frac{S_{N(t)}}{N(t)} \le t &< \frac{S_{N(t)+1}}{N(t)}\\
-			&=\frac{S_{N(t)+1}}{N(t)+1} \cdot \frac{N(t)+1}{N(t)}
+			F_n(t) &= \int\limits_0^t F_{n-m}(t-\xi) dF_m(\xi) \quad\\
+			& \le \int\limits_0^t F_{n-m}(t) dF_m(\xi) \le F_{n-m} \cdot F_m(t)
 		\end{split}
 	\end{equation}
-	We know that $N(t)\xrightarrow{t\to +\infty} \infty$ with probability 1
-	$$\implies \lim_{t \to +\infty} \frac{S_{N(t)}}{N(t)} =\lim_{N \to +\infty} \frac{S_{N}}{N} = \mu \quad \text{w.p. 1 for LLN}$$
 
-	So
-\begin{equation}
-	\mu \le \lim_{t \to +\infty} \frac{t}{N(t)} \stackrel{(1)}{\le}\mu \quad \implies \lim_{t \to +\infty} \frac{t}{N(t)} = \mu
-\end{equation}
-Where in $(1)$ the strict $<$ became $\le$ as we were dealing with limits.
+	We will use this property to set an upper bound for $M(t)$, as follows
+
+	\begin{equation} \label{eq:mt_convergence}
+		\begin{split}
+			M(t) &= \exp[N(t)] = \sum\limits_{j=1}^{+\infty} F_j(t) = \sum\limits_{n=0}^{+\infty} \sum\limits_{k=1}^{r} F_{n r + k}(t) \le \\
+			& \stackrel{(1)}{\le} \sum\limits_{n=0}^{+\infty} \sum\limits_{k=1}^{r} F_r(t) \, F_{(n-1) r + k}(t) \le \\
+			& \stackrel{(1)}{\le} \sum\limits_{n=0}^{+\infty} \sum\limits_{k=1}^{r} F_r(t) \left[ F_r(t) \, F_{(n-2) r + k}(t) \right] = \\
+			& = \sum\limits_{n=0}^{+\infty} \sum\limits_{k=1}^{r} F^2_r(t) \, F_{(n-2) r + k}(t) \le \ldots \stackrel{(2)}{\le} \sum\limits_{n=0}^{+\infty} F^n_r(t) \sum\limits_{k=1}^{r} F_k(t)
+		\end{split}
+	\end{equation}
+	where
+	\begin{itemize}
+		\item[(1)] both hold by applying equation \ref{eq:fn_upper_bound}
+		\item[(2)] is obtained applying \ref{eq:fn_upper_bound} recursevely
+	\end{itemize}
+
+	While the latter term on $k$ is always finite, since it is a finite sum, the former converges only if the $F_r(t)$ terms converge at least geometrically.
+
+	The two thesis are then proved.
+
+	\begin{equation}
+		\begin{dcases}
+			M(t) \le \sum\limits_{n=0}^{+\infty} F^n_r(t) \sum\limits_{k=1}^{r} F_k(t) < + \infty & \text{for finite } t \\
+			M(t) = +\infty & \text{ for } t \to +\infty
+		\end{dcases}
+	\end{equation}
+	where the latter holds since
+	$$ \lim_{t \to +\infty}M(t) = \lim_{t \to +\infty} \sum\limits_{j=1}^{+\infty} F_j(t) = +\infty \text{ since } \lim_{t \to +\infty} F_j(t) = 1 $$
 \end{proof}
 
-\textbf{(K.T. p. 102)}
-%\begin{theorem}[K.T. page 102]
-\begin{equation}
-	\begin{split}
-		M(t) &= \exp[N(t)] = \sum\limits_{j=1}^{+\infty}F_j(t) \\
-		F_n(t) &= \int\limits_0^t F_{n-m}(t-\xi) dF_m(\xi) \quad 1 \le m \le n-1\\
-		& \le \int\limits_0^t F_{n-m}(t) dF_m(\xi) \le F_{n-m} \cdot F_m(t) \quad \text{upper bound is valid if }\xi \to 0 \\
-		&\implies \sum\limits_{j=1}^{+\infty}F_j(t)= \sum\limits_{n=0}^{+\infty} \sum\limits_{k=1}^{r}F_{n \cdot r + k}(t) \\
-		F_{n \cdot r + k} (t) &\le F_r(t) \cdot F_{(n-1)\cdot r + k}(t) \le F_r^2(t) \cdot F_{(n-2)\cdot r +k}(t) \le \dots
-		\le \left[F_r(t)\right]^n \cdot F_k(t)\\
-		\sum\limits_{j=1}^{+\infty}F_j(t) &\le \sum\limits_{n=0}^{+\infty} \sum\limits_{k=1}^{r}\left[F_r(t)\right]^n \cdot F_k(t)
-		= \sum\limits_{n=0}^{+\infty} \left[F_r(t)\right]^n \cdot \sum\limits_{k=1}^{r}F_k(t)
-	\end{split}
-\end{equation}
-The sum converges unless $F_r(t)=1$ with geometric distribution.
-\begin{equation}
-	F_r(t)=\prob[S_r\le t]=\prob[\sum\limits_{i=1}^r X_i \le t]
-\end{equation}
-I can choose $r$ sufficiently large such that I can set $F_r(t)<1$ strictly. \\
-So, formally
-%\begin{equation*}
-	$$\exists t_0 >0 \text{ s.t. } F(t_0)<1 \quad \forall t \mbox{ }	\exists r \text{ s.t. } F_r(t)<1$$
-%\end{equation*}
-\begin{equation*}
-	\prob[S_r >t] = \prob\left[\sum\limits_{i=1}^r X_i > t \right] \ge
-	\left(\prob\left[X_i > \frac{t}{r}\right]\right)^r = \left[1-F\left(\frac{t}{r}\right)\right]^r>0
-	\quad \text{if }\frac{t}{r}<t_0
-\end{equation*}
-We can conclude
-\begin{enumerate}
-	\item $F_n(t)\xrightarrow{n\to +\infty}0$ at least geometrically
-	\item $M(t)<\infty \quad \forall t < \infty, \text{ on the other hand }	M(t)\xrightarrow{t \to +\infty}+\infty$
-\end{enumerate}
-
-\textbf{We saw that:}
-$$\exp[a(t-X)]=\int a(t-x)\cdot dF(x)$$
-
-We now want to extend it to another monothonic function which is not a probability distribution function.
-
-\begin{definition}[Convolution]
-	For any monothonic function $A$ and for any well behaved function $B$ we define the convolution as
-	\begin{equation}\begin{split}
-		A \ast B &= \int\limits_0^t B(t-\eta)\cdot dA(\eta) = B \ast A \\
-		\implies &\int a(t-x)\cdot dM(x) = M \ast a ~(t)
-	\end{split}\end{equation}
-\end{definition}
-
 \section{Renewal argument}
-We will firstly define it as conditioned to a particular value of $X_1$ and then we will extend it.
 
-$X_1 = x \quad \implies M(t)= \exp[N(t)]$ \\
-The starting point is
+% \begin{definition}[Convolution]
+% 	For any monothonic function $A$ and for any well behaved function $B$ we define the convolution as
+% 	\begin{equation}\begin{split}
+% 		A \ast B &= \int\limits_0^t B(t-\eta)\cdot dA(\eta) = B \ast A \\
+% 		% & \implies \int a(t-x)\cdot dM(x) = M \ast a ~(t)
+% 	\end{split}\end{equation}
+% \end{definition}
+
+% \begin{remark}[Expectation as convolution]
+% 	We can observe that, for continue random variables, the expectation is a convolution that deals with probability distributionss.
+% 	$$ \exp[a(t-X)]=\int a(t-x)\cdot dF(x) $$
+% \end{remark}
+
+The \emph{renewal argument} is less a proved result than a way of solve problems during the analysis of renewal processes.
+
+It consists of conditioning on the first renewal and then build a recursive equation on the quantity of desire. For example, to compute $M(t)$ one could proceed as follows.
+
 \begin{equation}
-	\exp[N(t)| X_1=x] =
+	\exp[N(t)| X_1 = x] =
 	\begin{cases}
-	0 & x>t \quad \text{the renewal has yet to happen} \\
+	0 & x>t \\
 	1+M(t-x) & x \le t
 	\end{cases}
 \end{equation}
-\begin{equation}
+where in the first case the renewal has yet to happen, while in the second it is counted and the quantity $M$ is computed on the remaining time.
+
+Averaging on the first event distribution, we can get the unconditioned value of $M(t)$:
+\begin{equation} \label{eq:mt_renewal_equation}
 	\begin{split}
 	M(t)= \exp[N(t)]&=\int\limits_0^{+\infty}\exp[N(t)|X_1=x] \cdot dF(x)\\
 	&=\int\limits_0^{t}[1+M(t-x)] \cdot dF(x)\\
@@ -211,58 +244,80 @@ The starting point is
 	\end{split}
 \end{equation}
 
-\section{Renewal Equation}
-\begin{equation}
-		A(t) = a(t) +\int\limits_0^{t}A(t-x) \cdot dF(x) \quad \text{ in general}
-\end{equation}
-with $a(t)$ given and $F(x)$ the common distribution. If $a(t)=F(t) \implies$ we have the equation for $M(t)$.
+\section{Renewal equations}
+
+\begin{definition}[Renewal Equation]
+	Formulas like \ref{eq:mt_renewal_equation} are so often encountered in these field of study that they took the name of \emph{renewal equations}.
+
+	\begin{equation} \label{eq:renewal_equation}
+			A(t) = a(t) +\int\limits_0^{t}A(t-x) \cdot dF(x)
+	\end{equation}
+	with $a(t)$ given and $F(x)$ a probability distribution.
+
+	Setting $a(t) = F(t)$ and $A(t) = M(t)$ we obtain the equation \ref{eq:mt_renewal_equation}.
+\end{definition}
 
 \begin{theorem}[4.1 K.T. p.184]
-	Let a(t) be a bounded function. The renewal equation has an unique solution with
-	the property of being bounded on finite intervals and such solution is
-	\begin{equation}
-		A(t) = a(t) + \int\limits_0^{t}[a(t-x)] \cdot dM(x)
+	Let a(t) be a bounded function, the renewal equation has an unique solution $A(t)$ bounded on finite intervals, that is
+	\begin{equation} \label{eq:renewal_solution}
+		A(t) = a(t) + \int\limits_0^{t} a(t-x) ~ dM(x)
 	\end{equation}
 \end{theorem}
-In other words it exists an unique solution that doesn't diverge in finite time.
+In other words it exists an unique solution that doesn't diverge in a finite time.
 \begin{proof}
 	The proof is in three steps: boundness, existence and uniqueness.
-	\proofpart
-	\textsc{Boundness}\label{req:boundness}
+	\proofpart of boundness \label{req:boundness}
+
+	For the triangle inequality and integral properties, we have that
+	$$ |A(t)| \le |a(t)| + \int\limits_0^{t}|a(t-x)| \cdot dM(x) $$
+
+	We can easily assess this upper buond for the value of $A(t)$, that proves our thesis.
 	\begin{equation}\begin{split}
-		|A(t)| & \le |a(t)| + \int\limits_0^{t}|a(t-x)| \cdot dM(x) \\
 		\sup_{0\le t \le T} |A(t)| & \le \sup_{0\le t \le T} |a(t)| + \int\limits_0^{T}\sup_{0\le \eta \le T}|a(\eta)| \cdot dM(x) \\
-		& = \sup_{0\le t \le T} |a(t)| \cdot (1+M(T)) < \infty \text{ as }
+		& = \sup_{0\le t \le T} |a(t)| \cdot [ 1+M(T) ] < \infty \text{ as }
 		\begin{cases}
-			|a(t)| & \text{bounded for hypothesis} \\
-			M(t) < \infty & \text{for } t<\infty
+			|a(t)| \text{ is bounded for hypothesis} \\
+			M(t) < \infty \text{ for } t<\infty
 		\end{cases}
 	\end{split}\end{equation}
 
-	\proofpart
-	\textsc{Existence}
+	\proofpart of existence
+
+		We will now assess that our guess is actually a valid solution obtaining \ref{eq:renewal_equation} from \ref{eq:renewal_solution}.
+
 		\begin{equation}\begin{split}
-			A(t) &= a(t) + M \ast a~(t) = a(t) + \left(\sum\limits_{k=1}^{+\infty} F_k \right) \ast a~(t) \\
-			&= a(t) + F \ast a~(t) +\left(\sum\limits_{k=2}^{+\infty} F_k \right) \ast a~(t)\\
-			\text{\textbf{Reminder:}}&\text{ each $F_k , k>1$ is the convolution with itself k times $F_k = F \ast F_{k-1}$} \\
-			\implies A(t) &= a(t) + F \ast \left[ a(t) + \left(\sum\limits_{k=1}^{+\infty} F_k \right) \ast a~(t) \right] \\
-			&=a(t) + F \ast A ~ (t) \quad \text{ which is the renewal equation.}
+			A(t) &= a(t) + M \ast a(t) = a(t) + \left(\sum\limits_{k=1}^{+\infty} F_k \right) \ast a(t) = \\
+			&= a(t) + F \ast a(t) +\left(\sum\limits_{k=2}^{+\infty} F_k \right) \ast a(t) = \\
+			&= a(t) + F \ast a(t) +\left(\sum\limits_{k=2}^{+\infty} F \ast F_{k-1} \right) \ast a(t) = \\
+			&= a(t) + F \ast \left[ a(t) + \left(\sum\limits_{k=1}^{+\infty} F_k \right) \ast a(t) \right] = \\
+			&= a(t) + F \ast \left[ a(t) + M(t) \ast a(t) \right] = \\
+			&=a(t) + F \ast A ~ (t)
 		\end{split}\end{equation}
-	\proofpart
-	\textsc{Uniqueness}
+
+	\proofpart of uniqueness
+
+	This proof is the inverse reasoning of the proof of existence, as we will obtain \ref{eq:renewal_solution} from \ref{eq:renewal_equation}.
+
 	\begin{equation}\begin{split}
 		A(t) &= a(t) + F \ast A(t) \quad \text{which is a recursive expression.} \\
-		&= a(t) + F \ast \left[a~(t) + F \ast A~(t) \right] = a(t) + F \ast a ~ (t) + F_2 \ast A~(t) \\
-		&= a(t) + F \ast a ~ (t) + F_2 \ast \left[a~(t) + F \ast A~(t) \right] \\
-		&= a(t) + F \ast a~(t) + F_2 \ast a~(t) + F_3 \ast A~(t) = \dots \\
-		&\text{after n steps we obtain} \\
-		A(t) &= a(t) + \left( \sum\limits_{k=1}^{n-1}F_k\right) \ast a~(t) + F_n \ast A~(t) \\
-		& \sum\limits_{k=1}^{n-1}F_k \xrightarrow{n \to +\infty} M \quad \implies A(t) = a(t) + M \ast a~(t) + \lim_{n \to +\infty} F_n \ast A~(t) \\
-		&\text{For our proof we want to show that the limit goes to zero:} \\
-		|F_n \ast A~(t)| &= |\int\limits_0^{t}A(t-\eta) \cdot dF_n(\eta)| \le \int\limits_0^{t}|A(t-\eta)| \cdot dF_n(\eta) \\
-		& \le \sup\limits_{0 \le \eta \le t} |A(\eta)| \cdot F_n (t) < +\infty \quad \text{ for what we found in \ref{req:boundness}} \\
-		&\implies |F_n \ast A~(t)| \xrightarrow{n \to +\infty} 0 \quad\text{ at least geometrically.}
+		&= a(t) + F \ast \left[a(t) + F \ast a(t) \right] = a(t) + F \ast a ~ (t) + F_2 \ast a(t) \\
+		&= a(t) + F \ast a ~ (t) + F_2 \ast \left[a(t) + F \ast a(t) \right] \\
+		&= a(t) + F \ast a(t) + F_2 \ast a(t) + F_3 \ast a(t) = \dots  = \\
+		&= a(t) + \left( \sum\limits_{k=1}^{n-1}F_k\right) \ast a(t) + F_n \ast a(t) \\
+	\end{split} \end{equation}
+
+	For $n \to +\infty$, the term between parenthesis becomes $M(t)$, for its definition.
+	\begin{equation}
+		A(t) = a(t) + M \ast a(t) + \lim_{n \to +\infty} F_n \ast a(t)
+	\end{equation}
+
+	For our proof we will show that the remaining limit goes to zero.
+	\begin{equation} \begin{split}
+		|F_n \ast a(t)| & = \left| \int\limits_0^{t}A(t-\eta) \cdot dF_n(\eta) \right| \le \\
+		& \le \int\limits_0^{t}|A(t-\eta)| \cdot dF_n(\eta) \le \sup\limits_{0 \le \eta \le t} |A(\eta)| \cdot F_n (t)
 	\end{split}\end{equation}
+
+	But, since $A(\eta)$ is bounded (see part \ref{req:boundness}) and $F_n(t)$ is infinitesimal in $n$, the proof is completed.
 \end{proof}
 
 \remark
