--- a/network_modeling/network_modeling.tex
+++ b/network_modeling/network_modeling.tex
@@ -21,7 +21,7 @@
 % math package
 \usepackage{mathtools}
 \usepackage{amsthm}
-\usepackage{amsmath, amssymb, dsfont, bm}
+\usepackage{amsmath, amssymb, dsfont, bm,blkarray}
 
 % tikz figures
 \usepackage[usenames, dvipsnames, table, tikz]{xcolor}
