--- a/network_modeling/network_modeling.tex
+++ b/network_modeling/network_modeling.tex
@@ -26,7 +26,7 @@
 % tikz figures
 \usepackage[usenames, dvipsnames, table, tikz]{xcolor}
 \usepackage{tikz}
-\usetikzlibrary{shapes, arrows}
+\usetikzlibrary{shapes, arrows,automata}
 
 % image path
 \graphicspath{ {./img/} }
@@ -102,7 +102,7 @@
 \newcommand{\D}{\mathbb{D}}
 \newcommand{\Rm}{\mathbb{R^{-1}}}
 \newcommand{\J}{\mathbb{J}}
-
+\newcommand*{\Chi}{\mbox{\Large $\chi$}}% big chi
 \newcommand{\Fig}[1]{Fig.~\ref{#1}}
 \newcommand{\eq}[1]{(\ref{#1})}
 \newcommand{\Tab}[1]{Tab.~\ref{#1}}
