--- a/network_modeling/renewalProc.tex
+++ b/network_modeling/renewalProc.tex
@@ -399,8 +399,10 @@ Less formally, N is independent on what happens after $X_n$.
 	\begin{enumerate}
 		\item Given $\prob[X_i=0]=\prob[X_i = 1] = \frac{1}{2}$, $N = \min\{n : X_1 + \dots + X_N =10\}$ is a \gls{st}, and in particular
 		$10 = \exp[N] \cdot \exp[X] = 0.5 \cdot \exp[N] \implies \exp[N]=20$
-		\item Given $\prob[X_i=-1]=\prob[X_i = 1] = \frac{1}{2}$, $N = \min\{n : X_1 + X_2 + \dots + X_N =1\}$ is a \gls{st}, but the expected stop time
-		is $1 = \exp[N] \cdot \exp[X] = 0 \cdot \exp[N] \implies $ ABSURD. We conclude that Wald's equation doesn't apply. So it must be that N has not finite mean $\implies \exp[N]=+\infty$
+		\item Given $\prob[X_i=-1]=\prob[X_i = 1] = \frac{1}{2}$, $N = \min\{n : X_1 + \dots + X_N =1\}$ is a \gls{st}, but the expected stop time
+		is $1 = \exp[N] \cdot \exp[X] = 0 \cdot \exp[N] $, which is an absurd.
+
+		We conclude that Wald's equation doesn't apply and so it must be that $N$ has not finite mean: $\exp[N]=+\infty$
 	\end{enumerate}
 
 \section{The key renewal theorem}
@@ -412,14 +414,15 @@ Less formally, N is independent on what happens after $X_n$.
 	\end{equation}
 \end{definition}
 \begin{definition}
-	(Arithmetic function) We say that a dristibution function F is \textit{arithmetic} if $\exists$ $\lambda > 0$ such that F has points of increase exclusively among the points 0, $\pm \lambda$, $\pm 2\lambda$, ... . \\
+	(Arithmetic function) We say that a distribution function F is \textit{arithmetic} if $\exists \lambda > 0$ such that F has points of increase exclusively among the points 0, $\pm \lambda$, $\pm 2\lambda$, \dots .
+
 	We call \textit{SPAN} the largest $\lambda$ for which F is still arithmetic.
 \end{definition}
 
-The distribution function of a discrete random variable with possible values 0,1,2,... is an arithmetic function with SPAN=1.
+The distribution function of a discrete random variable with possible values 0, 1, 2, \dots is an arithmetic function with SPAN=1.
 
 \begin{definition}
-	(Directly Riemann Integrable Function) Given a function g defined on [0, $\infty$) we define the following quantities for every $\delta > 0$:
+	(Directly Riemann Integrable Function) Given a function g defined on [0, $\infty$) we define the following quantities for $\delta > 0$:
 	\begin{align*}
 		\underline \sigma (\delta) = \delta \cdot \sum_{n=1}^{\infty} min\{g(t):(n-1)\delta \leq t \leq n \delta \}
 		\\
@@ -434,27 +437,25 @@ The distribution function of a discrete random variable with possible values 0,1
 We note that every function for which $\int_{0}^{\infty} |g(t)| dt$ < $\infty$ (g is absolutely integrable) is directly Riemann integrable.
 
 \begin{theorem}
-	(Key Renewal Theorem) Is given a distribution function F of a positive random variable $a$ with mean $\mu$. We suppone that $a$ is directly Riemann integrable and that $A$ is the solution of the \textit{renewal equation}
+	(Key Renewal Theorem) It is given a distribution function F of a positive random variable $a$ with mean $\mu$. We suppose that $a$ is directly Riemann integrable and that $A$ is the solution of the \textit{renewal equation}
 	\begin{equation}
 		A(t)=a(t)+\int_{0}^{t}A(t-x)dF(x)
 	\end{equation}
-	If F is not arithmetic, then:
+	If F is not arithmetic, then
 	\begin{equation*}
 		\lim_{t \rightarrow \infty} A(t) =
-		\begin{cases}
-			\frac{1}{\mu} \int_{0}^{\infty}a(x)dx \quad & if \quad \mu < \infty
-			\\
+		\begin{dcases}
+			\frac{1}{\mu} \int_{0}^{\infty}a(x)dx \quad & if \quad \mu < \infty \\
 			0 \quad & if \quad \mu = \infty
-		\end{cases}
+		\end{dcases}
 	\end{equation*}
-	If F is arithmetic with SPAN = $\lambda$ then $\forall c > 0$:
+	If F is arithmetic with SPAN = $\lambda$ then, $\forall c > 0$
 	\begin{equation*}
 		\lim_{t \rightarrow \infty} A(c+n\cdot \lambda) =
-		\begin{cases}
-			\frac{\lambda}{\mu} \sum_{n=0}^{\infty}a(c+n \cdot \lambda) \quad & if 	\quad \mu<\infty
-			\\
+		\begin{dcases}
+			\frac{\lambda}{\mu} \sum_{n=0}^{\infty}a(c+n \cdot \lambda) \quad & if 	\quad \mu<\infty \\
 			0 \quad & if \quad \mu = \infty
-		\end{cases}
+		\end{dcases}
 	\end{equation*}
 \label{KRT1}
 \end{theorem}
@@ -462,8 +463,8 @@ We note that every function for which $\int_{0}^{\infty} |g(t)| dt$ < $\infty$ (
 The theorem \ref{KRT1} can be also expressed in the following form:
 
 \begin{theorem}
-	(Key renewal theorem) Is given a distribution function F of a positive random variable with mean $\mu$. We suppone $h>0$ and that $M(t)=\sum_{k=1}^\infty F_{k}(t)$ is the \textit{renewal function} associated with F.
-	If F is not arithmetic then:
+	(Key renewal theorem) Is given a distribution function F of a positive random variable with mean $\mu$. We suppose $h>0$ and that $M(t)=\sum_{k=1}^\infty F_{k}(t)$ is the \textit{renewal function} associated with F.
+	If F is not arithmetic then
 	\begin{equation}
 		\lim_{t \rightarrow \infty} [M(t+h)-M(t)]=\frac{h}{\mu}
 	\end{equation}
@@ -474,74 +475,92 @@ The theorem \ref{KRT1} can be also expressed in the following form:
 	\label{KRT2}
 \end{theorem}
 
-We note that the \textit{elementary renewal theorem} $\lim_{t \to \infty} \frac{1}{t} M(t) = \frac{1}{\mu}$ is a corollary of the \textit{key renewal theorem} \ref{KRT2}.
+We note that the \textit{elementary renewal theorem} $\lim_{t \to \infty} M(t) / t = 1 / \mu$ is a corollary of the \textit{key renewal theorem} \ref{KRT2}.
 
 \subsection{Application of the key renewal theorem}
 
 \paragraph{Limiting distribution of the excess life}
 
-We say that $\gamma_{t}=S_{N(t)+1}-t$ is the excess life at time t and that $A_z=Prob[\gamma_t>z]$ for a fixed $z>0$. We obtain that:
+We say that $\gamma_{t}=S_{N(t)+1}-t$ is the excess life at time t and that $A_z=\prob[\gamma_t>z]$ for a fixed parameter $z>0$.
+
+Conditioning on the first event, we obtain that
 \begin{equation*}
-	Prob[\gamma_t>z|X_1=x] = \begin{cases}
+	\prob[\gamma_t>z|X_1=x] = \begin{cases}
 		1 \quad & if \quad x > t+z \\
 		0 \quad & if \quad t+x \geq x > t \\
 		A_z(t-x) \quad & if \quad t \geq x > 0
 	\end{cases}
 \end{equation*}
-For the law of the total probability we obtain that:
+
+For the law of the total probability we have
 \begin{align*}
-	A_z(t)= & \int_{0}^{\infty} Prob[\gamma_t>z|X_1=x] dF(x) = \int_{0}^{t}A_z(t-x)dF(x)+\int_{t+z}^{\infty}dF(x)= \\ & \int_{0}^{t}A_z(t-x)dF(x)+1-F(t+z)
+	A_z(t) &= \int_{0}^{\infty} \prob[\gamma_t>z|X_1=x] dF(x) = \int_{0}^{t}A_z(t-x)dF(x)+\int_{t+z}^{\infty}dF(x)= \\
+	&= \int_{0}^{t}A_z(t-x)dF(x)+ [1-F(t+z)]
 \end{align*}
-For the \textit{renewal equation} $ A(t)=a(t)+\int_{0}^{t}A(t-x)dF(x)=a(t)+\int_{0}^{t}a(t-x)dM(x) $ we conclude that:
+
+Now we apply the \textit{renewal equation} setting
+\begin{equation} \begin{dcases}
+	a(t) = 1 - F(t+z) \\
+	A_z(t)=\int_{0}^{t} [1-F(t+z-x)] dM(x)+1-F(t+z)
+\end{dcases} \end{equation}
+
 \begin{align*}
-	& a(t) = 1 - F(t+z) \\
-	& A_z(t)=\int_{0}^{t}(1-F(t+z-x))dM(x)+1-F(t+z) \\
-	& \int_{0}^{\infty} a(x) d(x) = \int_{0}^{\infty}(1-F(x)) d(x) = \int_{z}^{\infty}(1-F(y))dy \leq \int_{0}^{\infty}(1-F(y))dy = \mu
+	\int_{0}^{\infty} a(x) d(x) & = \int_{0}^{\infty}(1-F(x)) d(x) = \\
+	& = \int_{z}^{\infty}(1-F(y))dy \leq \int_{0}^{\infty}(1-F(y))dy = \mu
 \end{align*}
-We suppone $\mu < \infty$. For the \textit{renewal theorem} we obtain that:
+
+Supposing $\mu < \infty$, for the \textit{renewal theorem} we obtain that
 \begin{equation}
-	\lim_{t \rightarrow \infty} Prob[\gamma_t>z] = \lim_{t \rightarrow \infty} A_z(t) = \frac{1}{\mu} \cdot \int_z^{\infty}(1-F(x))dx \quad \forall z > 0
+	\lim_{t \rightarrow \infty} \prob[\gamma_t>z] = \lim_{t \rightarrow \infty} A_z(t) = \frac{1}{\mu} \cdot \int_z^{\infty}(1-F(x))dx \quad \forall z > 0
 	\label{limitingdistribution}
 \end{equation}
 
 From \ref{limitingdistribution} we can determine the limiting distribution for the \textit{current life} $\delta_t$ and for the \textit{total life} $\beta_t$. First we note that:
-\begin{equation}
-	\{\gamma_t \geq x, \delta_t \geq y \} \Leftrightarrow \{\gamma_{t-y} \geq x+y \}
-	\label{currtotallife}
+\begin{equation} \label{currtotallife}
+	\{\gamma_t \geq x, \delta_t \geq y \}
+	\Leftrightarrow
+	\{\gamma_{t-y} \geq x+y \}
 \end{equation}
-From \ref{currtotallife} we have that:
+From equation \ref{currtotallife} we have that
 \begin{align*}
-	\lim_{t \rightarrow \infty} Prob[\delta_t \geq y, \gamma_t \geq x] & = \lim_{t \rightarrow \infty} Prob[\gamma_{t-y} \geq x+y] \\ & = \frac{1}{\mu} \cdot \int_z^{\infty}(1-F(z))dz
+	\lim_{t \rightarrow \infty} \prob[\delta_t \geq y, \gamma_t \geq x] & = \lim_{t \rightarrow \infty} \prob[\gamma_{t-y} \geq x+y] \\ & = \frac{1}{\mu} \cdot \int_z^{\infty}(1-F(z))dz
 \end{align*}
-In particular we have that:
+In particular we have that
 \begin{align*}
-	\lim_{t \rightarrow \infty} Prob[\delta_t \geq y] & = \lim_{t \rightarrow \infty} Prob[\delta_t \geq y, \gamma_{t} \geq 0] \\ & = \frac{1}{\mu} \cdot \int_z^{\infty}(1-F(z))dz
+	\lim_{t \rightarrow \infty} \prob[\delta_t \geq y] & = \lim_{t \rightarrow \infty} \prob[\delta_t \geq y, \gamma_{t} \geq 0] \\ & = \frac{1}{\mu} \int_z^{\infty}(1-F(z))dz
 \end{align*}
-$\frac{1-F(z)}{\mu}$ is the probability density function of $\delta_t$. We are able to compute $\delta_t$ and $\gamma_t$ averages.
+
+So $\frac{1-F(z)}{\mu}$ is the probability density function of $\delta_t$. We are able to compute $\delta_t$ and $\gamma_t$ averages.
 \begin{align*}
-	\exp[\delta_t]=\exp[\gamma_t] & =\int_z^{\infty} \frac{z}{\mu} \cdot (1-F(z))dz \\ & = \frac{z^2}{2\mu}(1-F(z))|_0^{\infty}+\int_0^{\infty}\frac{z^2}{2 \mu} f(z)dz= \frac{\exp[X^2]}{2 \exp[X]}
+	\exp[\delta_t]=\exp[\gamma_t] & =\int_z^{\infty} \frac{z}{\mu} (1-F(z))dz \\ & = \frac{z^2}{2\mu} \left( 1-F(z) \right|_0^{\infty} + \int_0^{\infty}\frac{z^2}{2 \mu} f(z)dz= \frac{\exp[X^2]}{2 \exp[X]}
 \end{align*}
+
 Finally we conclude that:
-\begin{align}
-	& \exp[\delta_t] = \frac{\exp[X^2]}{2 \exp[X]}
-	\\ & \exp[\gamma_t] = \frac{\exp[X^2]}{2 \exp[X]}
-	\\ & \exp[\beta_t] = \frac{\exp[X^2]}{\exp[X]}
-\end{align}
+\begin{equation*}
+	\begin{dcases}
+		~ \exp[\delta_t] = \frac{\exp[X^2]}{2 \exp[X]} \\
+		~ \exp[\gamma_t] = \frac{\exp[X^2]}{2 \exp[X]} \\
+		~ \exp[\beta_t] = \frac{\exp[X^2]}{\exp[X]}
+	\end{dcases}
+\end{equation*}
+
 
 \paragraph{Asymptotic expansion of the renewal function}
+Given a distribution function $F$ of mean $\mu$ and variance $\sigma$ we want to find a more detailed description of the asymptotic behaviour of $M(t)$.
 
-Given a distribution function of mean $\mu$ and variance $\sigma$ we want to prove that $\lim_{t \rightarrow \infty} (M(t) - \frac{t}{\mu}) = \frac{\sigma^2-\mu^2}{2\mu^2}$. For $t \rightarrow \infty$ we have what follows:
+For $t \rightarrow \infty$ we have what follows
 \begin{align*}
 	M(t)-\frac{t}{\mu} & =\exp[N(t)+1]-\frac{t}{\mu}-1 \\
-	& = \frac{1}{\mu} \cdot (\exp[S_{N(t)+1}]-t)-1 \\
-	& = \frac{1}{\mu} \cdot \exp[\delta_t]-1 \\
+	& = \frac{1}{\mu} (\exp[S_{N(t)+1}]-t)-1 \\
+	& = \frac{1}{\mu} \exp[\delta_t]-1 \\
 	& = \frac{1}{\mu}\frac{\exp[X^2]}{2\mu}-1 \\
 	& = \frac{\sigma^2+\mu^2}{2\mu^2}-1 \\
 	& = \frac{\sigma^2-\mu^2}{2\mu^2}
 \end{align*}
-Then we conclude that:
+
+Then we finally prove that
 \begin{equation}
-	\lim_{t \rightarrow \infty} (M(t) - \frac{t}{\mu}) = \frac{\sigma^2-\mu^2}{2\mu^2}
+	\lim_{t \rightarrow \infty} \left( M(t) - \frac{t}{\mu} \right) = \frac{\sigma^2-\mu^2}{2\mu^2}
 \end{equation}
 
 \subsection{Delayed renewal processes}
@@ -609,27 +628,27 @@ So we have proved that:
 \subsection{Cumulative and related renewal process}
 We associate to every random varriable $X_i$ a second random variable $Y_i$. So $Y_i$ and $X_i$ are dependent but $(X_i,Y_i)$ and $(X_j,Y_j)$ are independent. We call F the distribution function of $X_i$, G the distribution function of $Y_i$, $\mu$ the mean of $X_i$ and $\nu$ the mean of $Y_i$.
 \paragraph{Queueieng model}
-Suppose to have queueing system in which the arrivals follow a Poisson process. $X_i$ represents the the period between two consequent arrivals. $Y_i$ is a portion $X_i$ and represents the period in which the queieng system is busy. We call $p(t)$ the probability that t falls into some portion $Y_i$. We suppone that the first interval has length $X_1=x$ and we obtain what follows.
+Suppose to have queueing system in which the arrivals follow a Poisson process. $X_i$ represents the the period between two consequent arrivals. $Y_i$ is a portion $X_i$ and represents the period in which the queieng system is busy. We call $p(t)$ the probability that t falls into some portion $Y_i$. We suppose that the first interval has length $X_1=x$ and we obtain what follows.
 \begin{align*}
-	p(t) & =Prob[t \in Y |X_1 = x]=\begin{cases}
-		Prob[Y_1>t|X_1=x] \quad & if \quad x \geq t
+	p(t) & =\prob[t \in Y |X_1 = x]=\begin{cases}
+		\prob[Y_1>t|X_1=x] \quad & if \quad x \geq t
 		\\ p(t-x) \quad & if \quad x<t
 	\end{cases}
-	\\ & = \int_0^t p(t-x)dF(x)+\int_t^{\infty}Prob[Y_1>t|X_1=x]dF(x)
+	\\ & = \int_0^t p(t-x)dF(x)+\int_t^{\infty}\prob[Y_1>t|X_1=x]dF(x)
 \end{align*}
-Knowing that $\int_0^{t}Prob[Y_1>t|X_1=x]dF(x)=0$ we have that:
+Knowing that $\int_0^{t}\prob[Y_1>t|X_1=x]dF(x)=0$ we have that:
 \begin{align*}
-	p(t) & = \int_0^t p(t-x)dF(x)+\int_0^{\infty}Prob[Y_1>t|X_1=x]dF(x)
-	\\ & = Prob[Y_1>t]+\int_0^t p(t-x)dF(x)
+	p(t) & = \int_0^t p(t-x)dF(x)+\int_0^{\infty}\prob[Y_1>t|X_1=x]dF(x)
+	\\ & = \prob[Y_1>t]+\int_0^t p(t-x)dF(x)
 \end{align*}
-We know that $p(t)= Prob[Y_1>t]+\int_0^t p(t-x)dF(x)$ is a renewal equation. We can establish that $\int_0^{\infty}Prob[Y_1>t]dt=\exp[Y_1]=\nu$. Applying the renewal theorem we obtain what follows.
+We know that $p(t)= \prob[Y_1>t]+\int_0^t p(t-x)dF(x)$ is a renewal equation. We can establish that $\int_0^{\infty}\prob[Y_1>t]dt=\exp[Y_1]=\nu$. Applying the renewal theorem we obtain what follows.
 \begin{align*}
 	\lim_{t \to \infty} p(t) & = \frac{1}{\mu}\cdot\int_0^{\infty}p(t)dt = \frac{\nu}{\mu}= \frac{\exp[X]}{\exp[Y]}
 \end{align*}
 
 \section{Reward Processes}
 
-Consider a \textit{renewal process} $N(t)$ with interarrival time $X_n$ with distribution function $F$. We suppone that each time a renewal occurs we receive a \textit{reward}; we call $R_n$ the reward associated with the nth renewal event. We suppone that each reward $R_n$ depend on the length of the interval $X_n$. In this scenario the pairs $(X_n, R_n)$ are independent and identically distribuited. We define the total number of reward at time $t$ $R(t)$ as follows.
+Consider a \textit{renewal process} $N(t)$ with interarrival time $X_n$ with distribution function $F$. We suppose that each time a renewal occurs we receive a \textit{reward}; we call $R_n$ the reward associated with the nth renewal event. We suppose that each reward $R_n$ depend on the length of the interval $X_n$. In this scenario the pairs $(X_n, R_n)$ are independent and identically distribuited. We define the total number of reward at time $t$ $R(t)$ as follows.
 \begin{equation}
 	R(t)=\sum_{n=1}^{N(t)}R_n
 \end{equation}
